# fflow

./: .gitignore  CONTEXT.md  KNOWN_ISSUES.md  README.md  conftest.py  pyproject.toml
docs/adr/: 0001-agnostic-loader-not-cache-mssql.md  0002-dlt-package-layout.md  0003-python-as-config.md  0004-pluggable-state-store.md  0005-el-only-dbt-handles-transforms.md  0006-continue-on-stream-error.md  0007-dlt-pipe-iterator-streaming-engine.md  0008-dlt-schema-contract.md  0009-sql-file-cursor-injection.md  0010-mssql-merge-pattern.md  0011-field-hashing-hmac-sha256.md  0012-redshift-literal-insert-over-bind-params.md
docs/official_docs/getting-started/: 0-installation.md
fflow/: __init__.py  cli.py  decorators.py
fflow/common/: __init__.py  config.py  exceptions.py  hashing.py  metadata.py  protocols.py  schema.py  state.py  type_map.py
fflow/destinations/: __init__.py  mssql.py  redshift.py  s3.py  sql.py
fflow/extract/: __init__.py  pipe_iterator.py
fflow/helpers/: airflow.py
fflow/pipeline/: __init__.py  pipeline.py
fflow/sources/: __init__.py  cache.py  rest.py  sql.py
tests/: README.md
tests/integration/: conftest.py
tests/unit/: conftest.py  test_airflow_helper.py  test_cache_source.py  test_cli.py  test_config.py  test_decorators.py  test_hashing.py  test_metadata.py  test_mssql_destination.py  test_pipe_iterator.py  test_pipeline.py  test_rest_source.py  test_s3_destination.py  test_schema.py  test_sql_destination.py  test_sql_source.py  test_state.py  test_type_map_phase3.py
