[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fflow"
version = "0.1.4"
description = "Agnostic data loader: any source → any destination"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "pyodbc>=5.0",
    "sqlalchemy>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
cache = [
    "jaydebeapi",
    "JPype1>=1.5",
]
s3 = [
    "boto3>=1.26",
    "pyarrow>=12.0",
]
redshift = [
    "boto3>=1.26",
    "pyarrow>=12.0",
    "psycopg2-binary>=2.9",
]
dev = [
    "pytest>=8.0",
    "pytest-mock",
]

[project.scripts]
fflow = "fflow.cli:main"
ff = "fflow.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires real DB connections (skipped in CI)",
]
